[package]
name = "sse_server"
version = "0.1.0"
edition = "2024"
license = "MIT"
[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
